--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             
             <section id="signup">
                 <p>No dejes pasar esta oportunidad para fortalecer tus habilidades financieras.¡Regístrate ahora mismo!</p>
-                <h2>Obtenen acceso al Webinar gratis al registrarte:</h2>
+                <h2>Obtenen acceso a nuesto Webinar gratis al registrarte:</h2>
                 <form id="register-form">
                     <input type="text" id="nombre" class="form-control" placeholder="Nombre" required>
                     <div id="nombre-error" class="error-message"></div>
