--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="testimonials">
                         <!-- Testimonio 1 -->
                         <div class="testimonial">
-                            <img src="./Imagen/testimonio1.jpg" alt="Foto de Eduardo García" style="width: 60px; height: 60px;">
+                            <img src="./Imagen/testimonio2.svg" alt="Foto de Eduardo García" style="width: 70px; height: 70px;">
                             <p>"El curso de finanzas para emprendedores superó mis expectativas. Ahora me siento mucho más seguro manejando mis finanzas."</p>
                             <p> Eduardo García</p>
                         </div>
@@ -114,7 +114,7 @@
                     <div class="testimonials">
                         <!-- Testimonio 2 -->
                         <div class="testimonial">
-                            <img src="./Imagen/testimonio2.jpg" alt="Foto de Laura Sanchez" style="width: 60px; height: 60px;">
+                            <img src="./Imagen/testimonio1.svg" alt="Foto de Laura Sanchez" style="width: 70px; height: 70px;">
                             <p>"Caroline Sada es una verdadera experta en finanzas. Su curso me proporcionó claridad sobre conceptos complejos de una manera simple y práctica."</p>
                             <p> Laura Sanchez</p>
                         </div>
@@ -125,7 +125,7 @@
                     <div class="testimonials">
                         <!-- Testimonio 3 -->
                         <div class="testimonial">
-                            <img src="./Imagen/testimonio3.jpg" alt="Foto de Manuel Gonzalez" style="width: 60px; height: 60px;">
+                            <img src="./Imagen/testimonio3.svg" alt="Foto de Manuel Gonzalez" style="width: 70px; height: 70px;">
                             <p>"¡Increíble experiencia! Este curso me equipó con las herramientas necesarias para transformar mi situación financiera. Lo recomiendo sin dudarlo."</p>
                             <p> Manuel González</p>
                         </div>
